--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mini-css-extract-plugin": "2.4.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.3"
   },
